# synacor-challenge

./: README.md
code/: .gitignore
code/src/: CMakeLists.txt
code/src/decipher/: CMakeLists.txt  main.cpp
code/src/ida/: CMakeLists.txt  disasm.cpp  main.cpp
code/src/main/: CMakeLists.txt  main.cpp  opcodes.hpp  vm.cpp
code/src/mapper/: CMakeLists.txt  main.cpp
code/src/monument/: monument.py
code/src/play/: CMakeLists.txt  challenge.cpp  commands.cpp  main.cpp
code/src/teleport/: CMakeLists.txt  flash.asm  main.cpp  main0.cpp
code/src/test/: CMakeLists.txt  main.cpp
code/src/vault/: CMakeLists.txt  main.cpp
code/src/vm/: CMakeLists.txt  debugger.cpp  loader.hpp  main.cpp  opcodes.hpp  types.hpp  vm.cpp
notes/: codes.txt  decoded.asm  monument.py  namemap.txt
python/: disasm.py  ida.py  play.py  readme.md
spec/: arch-spec  synacor-challenge.tgz
